--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The calculator package</description>
 
-  <maintainer email="s20c1016ct@s.chibakoudai.jp">Naoki iwasawa</maintainer>
+  <maintainer email="s20c1016ct@s.chibakoudai.jp">Naoki Iwasawa</maintainer>
 
   <license>BSD</license>
 
